--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vCBqN02cA3+rXSozmDyKHQ1HtVO38FWxOkiUlzsyPW0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -21,9 +21,9 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
+# DB_PORT=
+# DB_DATABASE=
+# DB_USERNAME=
 # DB_PASSWORD=
 
 SESSION_DRIVER=database
